--- a/pricing-table-2/challenge.css
+++ b/pricing-table-2/challenge.css
@@ -14,6 +14,12 @@ body {
 
 .container {
   /* Add your styles here */
+  background-color: rgb(29, 28, 28);
+  height: 100vh;
+  text-align: center;
+  padding:20px 40px;
+ 
+ 
 }
 
 .header {
@@ -22,18 +28,36 @@ body {
 
 h1 {
   /* Add your styles here */
+  color: rgb(254, 93, 93);
+  border: none;
 }
 
 .subtitle {
   /* Add your styles here */
+  color:rgb(114, 112, 112);
+  font-size: small;
 }
 
 .pricing-container {
   /* Add your styles here */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  height: 70%;  
+  padding: 10px 20px;
+  gap:30px
+ 
 }
 
 .pricing-card {
   /* Add your styles here */
+  padding: 20px 20px;
+   height: 102%;
+   width:17%;
+  border-radius: 10px;
+  background-color: rgb(35, 34, 34);
+ 
 }
 
 .pricing-card:hover {
@@ -42,34 +66,72 @@ h1 {
 
 .card-header {
   /* Add your styles here */
+  color: white;
+  font-size: small;
 }
 
 .icon {
   /* Add your styles here */
+ font-size:25px;
+ margin-top: 10px;
+  
 }
 
 .popular-tag {
   /* Add your styles here */
+  position: absolute;
+  top:173px;
+  background-color: rgb(249, 222, 51);
+  width:160px;
+  padding:7px 9px;
+  font-size: small;
+  font-weight: bold;
+  
+  border-radius: 25px;
+  left:45%
 }
 
 .price-block {
   /* Add your styles here */
+  padding: 15px 30px;
+  background-color: rgb(43, 43, 43);
+ 
+  border-radius: 10px;
+  text-align: center;
+  margin-top:15px;
 }
 
 .price {
   /* Add your styles here */
+  font-size:30px;
+  font-weight: bolder;
+  color: rgb(254, 93, 93);
 }
 
 .period {
   /* Add your styles here */
+  text-transform: uppercase;
+  color:rgb(114, 112, 112);
+  font-size: 10px;
+  margin-top: -5px;
 }
 
 .features {
   /* Add your styles here */
+  text-align: left;
+  font-size:12px;
+  color: rgb(224, 221, 221);
+  margin-top: 30px;
+  width: 100%;
+  
+  margin-left:-5px;
+  padding:4px
 }
 
 .features li {
   /* Add your styles here */
+  list-style: none;
+  margin-bottom: 20px;
 }
 
 .features li.disabled {
@@ -78,29 +140,49 @@ h1 {
 
 .join-btn {
   /* Add your styles here */
+  width: 100%;
+  padding:15px 30px;
+  background-color: transparent;
+  border: 2px solid rgb(254, 93, 93);
+  color:rgb(254, 93, 93);
+  font-weight: bold;
+  border-radius: 10px;
 }
 
 .join-btn:hover {
   /* Add your styles here */
+  color:rgb(194, 78, 78);
+
 }
+
 
 /* Custom Class Modifiers */
 .warrior {
   /* Add your styles here */
+  background-color: rgba(122, 58, 58, 0.2);
+  border:1px solid rgb(172, 49, 49);
+ 
 }
 
 .champion {
   /* Add your styles here */
+  border:1px solid rgb(240, 237, 56);
+  background-color: rgba(134, 132, 55, 0.2);
+
 }
 
 .champion .price {
   /* Add your styles here */
+  color:rgb(240, 237, 56)
 }
 
 .champion .join-btn {
   /* Add your styles here */
+  color:rgb(240, 237, 56);
+  border:2px solid rgb(240, 237, 56)
 }
 
 .champion .join-btn:hover {
   /* Add your styles here */
+  color:rgb(111, 110, 20);
 }
